Implement photo viewer

--- a/src/css/Editor.css
+++ b/src/css/Editor.css
@@ -15,3 +15,14 @@
     margin-top: 68%;
     margin-left: 20%;
 }
+
+.image-panel {
+}
+
+.addfile-button {
+    margin: 2%;
+}
+
+.photosviewer-topbar {
+    background-color: #f7f7f9;
+}
