--- a/src/components/transaction.css
+++ b/src/components/transaction.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 960px;
+  width: 600px;
 }
 
 /*
@@ -85,3 +85,14 @@
   height: 300px; 
   border-radius: 21px 21px 0 0;
 }
+
+.t {
+  height: 540px;
+}
+
+@media (max-width:768px) {
+  #container-wrapper {
+      min-width: 100vw
+  }
+}
+
