--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -19,6 +19,10 @@
   padding-bottom: 0.25rem;
 }
 
+.notes {
+  display: block;
+}
+
 .pagination .page-item.active .page-link {
   background-color: #4285f4 !important;
 }
